ferrolearn-core/tests/compile_fail/predict_unfitted_classifier.stderr
error[E0599]: no method named `predict` found for struct `LogisticRegression<F>` in the current scope
  --> tests/compile_fail/predict_unfitted_classifier.rs:12:19
   |
12 |     let _ = model.predict(&x);
   |                   ^^^^^^^ method not found in `LogisticRegression<f64>`
